bk_ida/gccida/g1/expand_builtin_return_addr
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_return_addr/src/builtins.c:849:34: error: must use 'enum' tag to refer to type 'built_in_function'
rtx  expand_builtin_return_addr( built_in_function fndecl_code, int count, rtx tem) 
                                 ^
                                 enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_return_addr/src/builtins.c:865:24: error: use of undeclared identifier 'machine_mode'
v7 = memory_address( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), result); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_return_addr/src/builtins.c:866:21: error: use of undeclared identifier 'machine_mode'
v8 = gen_rtx_MEM( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v7); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_return_addr/src/builtins.c:875:23: error: use of undeclared identifier 'machine_mode'
return gen_rtx_MEM( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v10); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_return_addr/src/builtins.c:885:23: error: use of undeclared identifier 'machine_mode'
return gen_rtx_MEM( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v4); 
                      ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_return_addr/src/obj/builtins.o] Error 1
